fixed issue in workflow api